fix(be) - Fix relationship between Location and Image